// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleSwitch /> with \`big\` prop matches with snapshot 1`] = `
<div
  className="sc-AxjAm jLRnid"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-AxirZ fbgcEt"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-AxiKw duWqIa"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`checkedColor\` \`defaultColor\` & \`disabledColor\` props matches with snapshot 1`] = `
<div
  className="sc-AxjAm jLRnid"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-AxirZ bviqyB"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-AxiKw hqHQqB"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="sc-AxjAm gcUFWi"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-AxirZ fbgcEt"
    disabled={true}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-AxiKw bkCPDJ"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`isChecked\` prop matches with snapshot 1`] = `
<div
  className="sc-AxjAm jLRnid"
>
  <button
    aria-label={null}
    aria-pressed={true}
    className="sc-AxirZ fbgcEt"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-AxiKw bkCPDJ"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`isLabelVisible\` prop matches with snapshot 1`] = `
<div
  className="sc-AxjAm jLRnid"
>
  <button
    aria-label="switch"
    aria-pressed={false}
    className="sc-AxirZ fbgcEt"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`<ToggleSwitch /> with \`label\` prop matches with snapshot 1`] = `
<div
  className="sc-AxjAm jLRnid"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-AxirZ fbgcEt"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-AxiKw bkCPDJ"
    for="toggle-switch"
  >
    A test label
  </label>
</div>
`;

exports[`<ToggleSwitch /> with default props matches with snapshot 1`] = `
<div
  className="sc-AxjAm jLRnid"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-AxirZ fbgcEt"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-AxiKw bkCPDJ"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;
